@@ -1,3 +1,11 @@
+2015-01-14  Marek Polacek  <polacek@redhat.com>
+
+	Backport from mainline
+	2015-01-13  Marek Polacek  <polacek@redhat.com>
+
+	PR middle-end/64391
+	* gcc.dg/tm/pr64391.c: New test.
+
 2015-01-13  Marc Glisse  <marc.glisse@inria.fr>
 
 	PR c++/54442
